2008-06-23  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Added tab == reindent function.

2008-06-20  Michael Hutchinson <mhutchinson@novell.com> 

	* Parser/CodeGenerator.cs: Implement creation of folding regions, and
	  copy workaround in ImplementMember to new ImplementMembers
	  override.

2008-06-20  Ankit Jain  <jankit@novell.com>

	* Gui/CSharpTextEditorExtension.cs (FindOverridables): Move to
	CodeRefactorer and use that.

2008-06-19  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/CSharpTextEditorCompletion.cs,
	  Gui/CSharpTextEditorExtension.cs: Worked on code completion with
	  the new dom.

2008-06-13  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs, Parser/DomParserOld.cs,
	  Parser/DomParser.cs, Parser/CSharpExpressionFinder.cs: Worked on
	  new expression finder.

2008-06-10  Andres G. Aragoneses <aaragoneses@novell.com> 

	* CSharpBindingCompilerManager.cs: Implement feature to allow unmanaged
	  project references in a managed project (bug#397490).

2008-06-04  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: fixed 'Bug 396798 - Smart
	  Indendation mode doesn't work with tab-to-space-conversion
	  enabled'.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.addin.xml: Bump MD version.

2008-05-28  Mike Krüger <mkrueger@novell.com> 

	* Parser/DomParser.cs: Worked on dom parser.

2008-05-27  Mike Krüger <mkrueger@novell.com> 

	* Parser/DomParser.cs: Fixed some bugs in the new dom parsing.

2008-05-27  Mike Krüger <mkrueger@novell.com> 

	* Parser/DomParser.cs: Added new dom & new class browser.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.addin.xml: Merged the extension points for project and
	  solution option panels into a single extension point. A single
	  extension point will now be used for all kinds of items. Extension
	  conditions can be used to make panels visible only for some